# surrogate-test-models

./: .gitattributes  .gitignore  .gitmodules  LICENSE.md  README.md  generate_data.sh  generate_fmus.sh  main.py  pyproject.toml
config/: data_generation.yaml
config/pModel/: CartPole.yaml  KoopmanTu.yaml  Lorentz.yaml  PowerPlant.yaml  PowerPlant_step.yaml  SHF.yaml  SHF_step.yaml  SHF_three.yaml  SHF_three_parameterCalibration.yaml  SimpleSeriesResonance.yaml  SimpleSeriesResonanceTwoDyn.yaml  SteamCycle01.yaml  StratifiedHeatFlowModel.yaml  ThreeStratifiedHeatFlowModel.yaml  chaoticLorentz.yaml
models/ClaRaTester/: ClaRaTester_SteamCycle.fmu  SteamCycle_01.fmu  SteamCycle_01.mo  Testbed.mo  export_SteamCycle_01.mos  libraries.txt  package.mo  package.order
models/KoopmanTester/: KoopmanTester_Tu_0et_0al_NonlinearModel.fmu  KoopmanTester_chaotic_0lorenz_0system_chaoticLorenz.fmu  package.mo  package.order
models/MechanicalTesters/: CartPole_polar.fmu  CartPole_polar.mo  export_CartPole_polar.mos  package.mo  package.order  startup.mos
models/SeriesResonanceTesters/: AdvancedSeriesResonance.fmu  AdvancedSeriesResonance.mo  SeriesResonanceTesters_SimpleSeriesResonance.fmu  SeriesResonanceTesters_SimpleSeriesResonanceTwoDyn.fmu  SimpleSeriesResonance.fmu  SimpleSeriesResonance.mo  SimpleSeriesResonanceTwoDyn.fmu  SimpleSeriesResonanceTwoDyn.mo  export_AdvancedSeriesResonance.mos  export_SimpleSeriesResonance.mos  export_SimpleSeriesResonanceTwoDyn.mos  package.mo  package.order
models/ThermalTesters/: StratifiedHeatFlowModel.fmu  (+14 more)
third_party_licenses/: ClaRa.md
(+31 files in other folders)
