[project]
name = "surrogate-test-models"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dymola-python-interface-wrapper",
]

[tool.uv.workspace]
members = [
    "packages/dymola-python-interface-wrapper",
]

[tool.uv.sources]
dymola-python-interface-wrapper = {workspace = true}
